test/expected/large/annotations/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: annotations
    foo.com/duversion: 2.1.8-20190909.1568058091450
    foo.com/version: 2.1.8
  labels:
    app.kubernetes.io/name: annotations
    helm.sh/chart: annotations-2.1.8
  name: annotations
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: annotations
  type: ClusterIP
